--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -53,11 +53,11 @@ main {
 }
 
 section {
-    margin-top: 2opx;
+    margin-top: 20px;
     width: 80%;
     height: auto;
     background-color: #333;
-    color: rgb (238), 238, 238);
+    color: rgb(238, 238, 238);
     border-radius: 10px;
 }
 
@@ -71,7 +71,7 @@ section {
     width: 100%;
     margin: 0;
     border-radius: 0;
-    background-image: url(../img/descarga.jpg);
+    background-image: url(../img/header.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -82,11 +82,11 @@ section {
     text-align: center;
 }
 
-#profile-pic {
+#ProfilePic {
     width: 400px;
     height: 400px;
     background-color: black;
-    background-image: url(../img/descarga\ \(1\).jpg);
+    background-image: url(../img/dos.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
